compiler/fir/resolve/testData/resolve/problems/extensionLambdaInDefaultArgument.kt
fun test(
    val f: String.() -> Int = { <!UNRESOLVED_REFERENCE!>length<!> }
): Int {
    return "".f()
}